Replace `.get(0)` with `.getFirst()` for improved clarity.
Updated instances of `.get(0)` with `.getFirst()` method across multiple classes to promote code clarity and better convey the intention of accessing the first element in lists. This helps enhance code readability and maintenance.