@@ -436,7 +436,7 @@ public class GeneralAlgorithmRunner implements AlgorithmRunner, ParamsResettable
         } else {
             if (getAlgorithm() instanceof MultiDataSetAlgorithm) {
                 for (int k = 0; k < this.parameters.getInt("numRuns"); k++) {
-                    Knowledge knowledge1 = getDataModelList().get(0).getKnowledge();
+                    Knowledge knowledge1 = getDataModelList().getFirst().getKnowledge();
                     List<DataModel> dataSets = new ArrayList<>(getDataModelList());
                     for (DataModel dataSet : dataSets) dataSet.setKnowledge(knowledge1);
                     int randomSelectionSize = this.parameters.getInt("randomSelectionSize");
@@ -605,11 +605,11 @@ public class GeneralAlgorithmRunner implements AlgorithmRunner, ParamsResettable
         if (dataModelList.containsEmptyData()) {
             return false;
         } else {
-            if (dataModelList.get(0) instanceof CovarianceMatrix) {
+            if (dataModelList.getFirst() instanceof CovarianceMatrix) {
                 return false;
             }
 
-            DataSet dataSet = (DataSet) dataModelList.get(0);
+            DataSet dataSet = (DataSet) dataModelList.getFirst();
 
             return dataSet.existsMissingValue();
         }
@@ -682,7 +682,7 @@ public class GeneralAlgorithmRunner implements AlgorithmRunner, ParamsResettable
             DataModelList dataModelList = this.dataWrapper.getDataModelList();
 
             if (dataModelList.size() == 1) {
-                return dataModelList.get(0);
+                return dataModelList.getFirst();
             } else {
                 return dataModelList;
             }
@@ -789,7 +789,7 @@ public class GeneralAlgorithmRunner implements AlgorithmRunner, ParamsResettable
         }
 
         if (this.independenceTests.size() == 1) {
-            return this.independenceTests.get(0);
+            return this.independenceTests.getFirst();
         }
 
         Algorithm algo = getAlgorithm();
